--- a/dev/public/brand-large.html
+++ b/dev/public/brand-large.html
@@ -1645,7 +1645,7 @@
         </div>
       </main>
       <footer class="page-footer" itemscope="" itemtype="http://schema.org/WPFooter">
-        <div class="big-grid">
+        <div class="big-grid" style="padding: 0 20px;">
           <div class="big-grid__item-double-center text-left">
             <div>
               <div class="footer-top">
