--- a/dev/public/shops.html
+++ b/dev/public/shops.html
@@ -547,7 +547,7 @@
                 <div class="item-shop-address">м. Войковская, м. Тульская, ул. Большая Тульская, д. 13, ТРЦ &quot;Ереван Плаза&quot;, 2 этаж</div>
                 <div class="item-shop-time">Пн-Вс: с 10:00 до 22:00</div>
                 <div class="item-shop-time"></div>
-                <div class="item-shop-phone"> <a href="tel:8 926 734 07 15">8 926 734 07 15</a></div><a class="link link--black_border show-on--map" href="shop-map.html?id=1" data-shop="1">Показать на карте       </a>
+                <div class="item-shop-phone"> <a href="tel:8 926 734 07 15">8 926 734 07 15</a></div><a class="link link--black_border show-on--map" href="shop-map.html?id=0">Показать на карте       </a>
               </div>
             </div>
             <div class="item-shop"> 
@@ -556,7 +556,7 @@
                 <div class="item-shop-address">м. Деловой центр, Пресненская наб., д. 2, ТРЦ «АФИМОЛЛ Сити», 3 этаж </div>
                 <div class="item-shop-time">Вс-Чт: с 10:00 до 22:00, Пт-Сб: с 10:00 до 23:00</div>
                 <div class="item-shop-time"></div>
-                <div class="item-shop-phone"> <a href="tel:8 985 926 51 36">8 985 926 51 36</a></div><a class="link link--black_border show-on--map" href="shop-map.html?id=2" data-shop="2">Показать на карте       </a>
+                <div class="item-shop-phone"> <a href="tel:8 985 926 51 36">8 985 926 51 36</a></div><a class="link link--black_border show-on--map" href="shop-map.html?id=1">Показать на карте       </a>
               </div>
             </div>
             <div class="item-shop"> 
@@ -565,7 +565,7 @@
                 <div class="item-shop-address">м. Университет, пр-т Вернадского, д. 6, ТЦ «Капитолий», 2 этаж</div>
                 <div class="item-shop-time">Пн-Вс: с 10:00 до 22:00</div>
                 <div class="item-shop-time"></div>
-                <div class="item-shop-phone"> <a href="tel:8 985 926 51 36">8 985 926 51 36</a></div><a class="link link--black_border show-on--map" href="shop-map.html?id=3" data-shop="3">Показать на карте       </a>
+                <div class="item-shop-phone"> <a href="tel:8 985 926 51 36">8 985 926 51 36</a></div><a class="link link--black_border show-on--map" href="shop-map.html?id=2">Показать на карте       </a>
               </div>
             </div>
             <div class="item-shop"> 
@@ -574,7 +574,7 @@
                 <div class="item-shop-address">Адрес: м. Войковская, Ленинградское ш., д. 16А, ТЦ &quot;Метрополис&quot;, 2 этаж</div>
                 <div class="item-shop-time">Режим работы: Пн-Вс: с 10:00 до 23:00</div>
                 <div class="item-shop-time"></div>
-                <div class="item-shop-phone"> <a href="tel:8 919 720 04 57">8 919 720 04 57</a></div><a class="link link--black_border show-on--map" href="shop-map.html?id=4" data-shop="4">Показать на карте       </a>
+                <div class="item-shop-phone"> <a href="tel:8 919 720 04 57">8 919 720 04 57</a></div><a class="link link--black_border show-on--map" href="shop-map.html?id=3">Показать на карте       </a>
               </div>
             </div>
             <div class="item-shop"> 
@@ -583,7 +583,7 @@
                 <div class="item-shop-address">м. ЦСКА, Ходынский бульвар, д. 4, ТЦ «Авиапарк», 2 этаж</div>
                 <div class="item-shop-time">Вс-Чт: с 10:00 до 22:00</div>
                 <div class="item-shop-time">Пт-Сб: с 10:00 до 23:00</div>
-                <div class="item-shop-phone"> <a href="tel:8 985 115 95 42">8 985 115 95 42</a></div><a class="link link--black_border show-on--map" href="shop-map.html?id=5" data-shop="5">Показать на карте       </a>
+                <div class="item-shop-phone"> <a href="tel:8 985 115 95 42">8 985 115 95 42</a></div><a class="link link--black_border show-on--map" href="shop-map.html?id=4">Показать на карте       </a>
               </div>
             </div>
             <div class="item-shop"> 
@@ -592,7 +592,7 @@
                 <div class="item-shop-address">м. Крылатское, Рублевское шоссе, д. 62, МТК «Европарк», 1 этаж</div>
                 <div class="item-shop-time">Пн-Вс: с 10:00 до 22:00</div>
                 <div class="item-shop-time"></div>
-                <div class="item-shop-phone"> <a href="tel:8 964 646 82 34">8 964 646 82 34</a></div><a class="link link--black_border show-on--map" href="shop-map.html?id=6" data-shop="6">Показать на карте       </a>
+                <div class="item-shop-phone"> <a href="tel:8 964 646 82 34">8 964 646 82 34</a></div><a class="link link--black_border show-on--map" href="shop-map.html?id=5">Показать на карте       </a>
               </div>
             </div>
             <div class="item-shop"> 
@@ -601,7 +601,7 @@
                 <div class="item-shop-address">г. Москва, м. Белорусская, ул. Лесная, д. 10-16</div>
                 <div class="item-shop-time">Пн-Вс: с 10:00 до 22:00</div>
                 <div class="item-shop-time"></div>
-                <div class="item-shop-phone"> <a href="tel:8 919 720 04 32">8 919 720 04 32</a></div><a class="link link--black_border show-on--map" href="shop-map.html?id=7" data-shop="7">Показать на карте       </a>
+                <div class="item-shop-phone"> <a href="tel:8 919 720 04 32">8 919 720 04 32</a></div><a class="link link--black_border show-on--map" href="shop-map.html?id=6">Показать на карте       </a>
               </div>
             </div>
             <div class="item-shop"> 
@@ -610,7 +610,7 @@
                 <div class="item-shop-address">м. Охотный ряд, ул.Охотный ряд., д. 2, ТГ «Модный сезон», 2 этаж</div>
                 <div class="item-shop-time">Пн-Вс: с 10:00 до 22:00</div>
                 <div class="item-shop-time"></div>
-                <div class="item-shop-phone"> <a href="tel:8 926 419 36 33">8 926 419 36 33</a></div><a class="link link--black_border show-on--map" href="shop-map.html?id=8" data-shop="8">Показать на карте       </a>
+                <div class="item-shop-phone"> <a href="tel:8 926 419 36 33">8 926 419 36 33</a></div><a class="link link--black_border show-on--map" href="shop-map.html?id=7">Показать на карте       </a>
               </div>
             </div>
           </div>
