edits for brand mobile

--- a/dev/public/brand-large.html
+++ b/dev/public/brand-large.html
@@ -1559,7 +1559,7 @@
                 <div class="load-more-holder"><a class="btn btn--black_border btn--medium load-more" href="section.html" data-container="#catalog-items" data-itemsselector="#catalog-items .catalog-items">ПОКАЗАТЬ ЕЩЕ 20</a></div>
               </div>
             </div>
-            <div class="big-grid__item-double-center"> 
+            <div class="big-grid__item-double-center" style="margin-left: 0; margin-right: 0;">
               <div class="catalog">
                 <div class="catalog slider-prev-watched">
                   <div class="row justify-content-between align-items-center">
@@ -1580,7 +1580,7 @@
                           </svg></span></div>
                     </div>
                   </div>
-                  <div class="catalog-items row catalog-items--slider-watched mlr-sm--20px m-0" style="position: relative; left: -12px;"> 
+                  <div class="catalog-items row catalog-items--slider-watched mlr-sm--20px m-0 left-12px">
                     <div class="col-md-2">
                       <div class="catalog-item w1">
                         <div class="catalog-item-photo-holder"><img class="cover" src="../dummy/prev-watched/c24.jpg"></div>
@@ -1645,7 +1645,7 @@
         </div>
       </main>
       <footer class="page-footer" itemscope="" itemtype="http://schema.org/WPFooter">
-        <div class="big-grid" style="padding: 0 20px;">
+        <div class="big-grid plr-15px">
           <div class="big-grid__item-double-center text-left">
             <div>
               <div class="footer-top">
