--- a/dev/public/brand-large.html
+++ b/dev/public/brand-large.html
@@ -27,7 +27,7 @@
     <script src="https://api-maps.yandex.ru/2.1/?load=package.standard&amp;lang=ru-RU&amp;apikey=3493f917-bc4d-4df0-aaaf-2d994fa3f731" type="text/javascript"></script>
   </head>
   <body class="overflow-x">
-    <div class="page">
+    <div class="page overflow-x">
       <html>
         <head></head>
         <body>
@@ -521,7 +521,7 @@
             </div>
           </div>
         </div>
-        <div class="page-inner page-inner--w21"> 
+        <div class="page-inner overflow-x1"> 
           <div class="big-grid" id="catalog-items">
             <div class="big-grid__item-one-center"> 
               <div class="catalog-item w2 m-0">
@@ -536,7 +536,7 @@
                       <path d="M20.9785 12.8523C21.1737 13.0475 21.4903 13.0475 21.6856 12.8523C21.8808 12.657 21.8808 12.3404 21.6856 12.1451L20.9785 12.8523ZM14.3939 4.85348C14.1987 4.65822 13.8821 4.65822 13.6868 4.85348C13.4915 5.04874 13.4915 5.36532 13.6868 5.56058L14.3939 4.85348ZM21.6856 12.1451L14.3939 4.85348L13.6868 5.56058L20.9785 12.8523L21.6856 12.1451Z" fill="#1D1D1D"></path>
                       <path d="M20.9785 12.1438C21.1737 11.9486 21.4903 11.9486 21.6856 12.1438C21.8808 12.3391 21.8808 12.6557 21.6856 12.8509L20.9785 12.1438ZM14.3939 20.1426C14.1987 20.3379 13.8821 20.3379 13.6868 20.1426C13.4915 19.9474 13.4915 19.6308 13.6868 19.4355L14.3939 20.1426ZM21.6856 12.8509L14.3939 20.1426L13.6868 19.4355L20.9785 12.1438L21.6856 12.8509Z" fill="#1D1D1D"></path>
                     </svg></span></div>
-                <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1, &quot;infinite&quot;: true}"><img class="cover" src="./../dummy/catalog-large/c1.jpg"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c24.jpg"></div>
+                <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1, &quot;infinite&quot;: true}"><img class="cover" src="./../dummy/catalog-large/c1.png"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c24.jpg"></div>
                 <div class="slider-size"> 
                   <div class="slider-size__title">Добавить в корзину</div>
                   <div class="slider-size__list"> 
@@ -549,13 +549,13 @@
                     </ul>
                   </div>
                 </div>
-                <div class="catalog-item-title"> <span> <span>КОМБИНЕЗОН</span>
-                    <div class="catalog-item-price text-left">11 300 РУБ.</div></span>
+                <div class="catalog-item-title"> <span> <span>ПЛАТЬЕ</span>
+                    <div class="catalog-item-price text-left">20 300 РУБ.</div></span>
                   <div class="catalog-item-color">+2 цвета</div>
                 </div>
                 <div class="order-table__color" style="width: calc(2 * 19px);"><a class="order-table__color-link color-active" href="#"> <span class="color-red"> </span></a><a class="order-table__color-link" href="#"> <span class="color-yellow"></span></a>
                 </div><a class="catalog-item-link" href="card.html"></a>
-                <button class="catalog-item-like" type="button"></button>
+                <button class="catalog-item-like" type="button">   </button>
               </div>
             </div>
             <div class="big-grid__item-one-center-text">
@@ -667,7 +667,7 @@
                 </div>
                 <div class="order-table__color" style="width: calc(2 * 19px);"><a class="order-table__color-link color-active" href="#"> <span class="color-red"> </span></a><a class="order-table__color-link" href="#"> <span class="color-yellow"></span></a>
                 </div><a class="catalog-item-link" href="card.html"></a>
-                <button class="catalog-item-like" type="button">      </button>
+                <button class="catalog-item-like" type="button"> </button>
               </div>
             </div>
             <div class="big-grid__item-four-left"> 
@@ -797,7 +797,7 @@
                       <path d="M20.9785 12.8523C21.1737 13.0475 21.4903 13.0475 21.6856 12.8523C21.8808 12.657 21.8808 12.3404 21.6856 12.1451L20.9785 12.8523ZM14.3939 4.85348C14.1987 4.65822 13.8821 4.65822 13.6868 4.85348C13.4915 5.04874 13.4915 5.36532 13.6868 5.56058L14.3939 4.85348ZM21.6856 12.1451L14.3939 4.85348L13.6868 5.56058L20.9785 12.8523L21.6856 12.1451Z" fill="#1D1D1D"></path>
                       <path d="M20.9785 12.1438C21.1737 11.9486 21.4903 11.9486 21.6856 12.1438C21.8808 12.3391 21.8808 12.6557 21.6856 12.8509L20.9785 12.1438ZM14.3939 20.1426C14.1987 20.3379 13.8821 20.3379 13.6868 20.1426C13.4915 19.9474 13.4915 19.6308 13.6868 19.4355L14.3939 20.1426ZM21.6856 12.8509L14.3939 20.1426L13.6868 19.4355L20.9785 12.1438L21.6856 12.8509Z" fill="#1D1D1D"></path>
                     </svg></span></div>
-                <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1, &quot;infinite&quot;: true}"><img class="cover" src="../dummy/catalog-large/с9.jpg"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c24.jpg"></div>
+                <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1, &quot;infinite&quot;: true}"><img class="cover" src="./../dummy/catalog-large/с9.jpg"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c24.jpg"></div>
                 <div class="slider-size"> 
                   <div class="slider-size__title">Добавить в корзину</div>
                   <div class="slider-size__list"> 
@@ -816,10 +816,10 @@
                 </div>
                 <div class="order-table__color" style="width: calc(2 * 19px);"><a class="order-table__color-link color-active" href="#"> <span class="color-red"> </span></a><a class="order-table__color-link" href="#"> <span class="color-yellow"></span></a>
                 </div><a class="catalog-item-link" href="card.html"></a>
-                <button class="catalog-item-like" type="button">      </button>
+                <button class="catalog-item-like" type="button"> </button>
               </div>
             </div>
-            <div class="big-grid__item-one-center"> 
+            <div class="big-grid__item-one-center">
               <div class="catalog-item w2 m-0">
                 <div class="slider-arrows"><span class="catalog-item-slider-arrow prev">
                     <svg width="26" height="25" viewBox="0 0 26 25" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -832,7 +832,7 @@
                       <path d="M20.9785 12.8523C21.1737 13.0475 21.4903 13.0475 21.6856 12.8523C21.8808 12.657 21.8808 12.3404 21.6856 12.1451L20.9785 12.8523ZM14.3939 4.85348C14.1987 4.65822 13.8821 4.65822 13.6868 4.85348C13.4915 5.04874 13.4915 5.36532 13.6868 5.56058L14.3939 4.85348ZM21.6856 12.1451L14.3939 4.85348L13.6868 5.56058L20.9785 12.8523L21.6856 12.1451Z" fill="#1D1D1D"></path>
                       <path d="M20.9785 12.1438C21.1737 11.9486 21.4903 11.9486 21.6856 12.1438C21.8808 12.3391 21.8808 12.6557 21.6856 12.8509L20.9785 12.1438ZM14.3939 20.1426C14.1987 20.3379 13.8821 20.3379 13.6868 20.1426C13.4915 19.9474 13.4915 19.6308 13.6868 19.4355L14.3939 20.1426ZM21.6856 12.8509L14.3939 20.1426L13.6868 19.4355L20.9785 12.1438L21.6856 12.8509Z" fill="#1D1D1D"></path>
                     </svg></span></div>
-                <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1, &quot;infinite&quot;: true}"><img class="cover" src="../dummy/catalog-large/с10.jpg"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c24.jpg"></div>
+                <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1, &quot;infinite&quot;: true}"><img class="cover" src="./../dummy/catalog-large/с10.jpg"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c24.jpg"></div>
                 <div class="slider-size"> 
                   <div class="slider-size__title">Добавить в корзину</div>
                   <div class="slider-size__list"> 
@@ -845,13 +845,13 @@
                     </ul>
                   </div>
                 </div>
-                <div class="catalog-item-title"> <span> <span>ПЛАТЬЕ</span>
-                    <div class="catalog-item-price text-left">9 800 РУБ.</div></span>
+                <div class="catalog-item-title"> <span> <span>САРАФАН</span>
+                    <div class="catalog-item-price text-left">13 800 РУБ.</div></span>
                   <div class="catalog-item-color">+2 цвета</div>
                 </div>
                 <div class="order-table__color" style="width: calc(2 * 19px);"><a class="order-table__color-link color-active" href="#"> <span class="color-red"> </span></a><a class="order-table__color-link" href="#"> <span class="color-yellow"></span></a>
                 </div><a class="catalog-item-link" href="card.html"></a>
-                <button class="catalog-item-like" type="button">      </button>
+                <button class="catalog-item-like" type="button"> </button>
               </div>
             </div>
             <div class="big-grid__item-double-center">
@@ -902,7 +902,7 @@
                       <path d="M20.9785 12.8523C21.1737 13.0475 21.4903 13.0475 21.6856 12.8523C21.8808 12.657 21.8808 12.3404 21.6856 12.1451L20.9785 12.8523ZM14.3939 4.85348C14.1987 4.65822 13.8821 4.65822 13.6868 4.85348C13.4915 5.04874 13.4915 5.36532 13.6868 5.56058L14.3939 4.85348ZM21.6856 12.1451L14.3939 4.85348L13.6868 5.56058L20.9785 12.8523L21.6856 12.1451Z" fill="#1D1D1D"></path>
                       <path d="M20.9785 12.1438C21.1737 11.9486 21.4903 11.9486 21.6856 12.1438C21.8808 12.3391 21.8808 12.6557 21.6856 12.8509L20.9785 12.1438ZM14.3939 20.1426C14.1987 20.3379 13.8821 20.3379 13.6868 20.1426C13.4915 19.9474 13.4915 19.6308 13.6868 19.4355L14.3939 20.1426ZM21.6856 12.8509L14.3939 20.1426L13.6868 19.4355L20.9785 12.1438L21.6856 12.8509Z" fill="#1D1D1D"></path>
                     </svg></span></div>
-                <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1, &quot;infinite&quot;: true}"><img class="cover" src="../dummy/catalog-large/с11.jpg"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c24.jpg"></div>
+                <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1, &quot;infinite&quot;: true}"><img class="cover" src="./../dummy/catalog-large/с11.jpg"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c24.jpg"></div>
                 <div class="slider-size"> 
                   <div class="slider-size__title">Добавить в корзину</div>
                   <div class="slider-size__list"> 
@@ -921,7 +921,7 @@
                 </div>
                 <div class="order-table__color" style="width: calc(2 * 19px);"><a class="order-table__color-link color-active" href="#"> <span class="color-red"> </span></a><a class="order-table__color-link" href="#"> <span class="color-yellow"></span></a>
                 </div><a class="catalog-item-link" href="card.html"></a>
-                <button class="catalog-item-like" type="button">      </button>
+                <button class="catalog-item-like" type="button">   </button>
               </div>
             </div>
             <div class="big-grid__item-one-center"> 
@@ -937,7 +937,7 @@
                       <path d="M20.9785 12.8523C21.1737 13.0475 21.4903 13.0475 21.6856 12.8523C21.8808 12.657 21.8808 12.3404 21.6856 12.1451L20.9785 12.8523ZM14.3939 4.85348C14.1987 4.65822 13.8821 4.65822 13.6868 4.85348C13.4915 5.04874 13.4915 5.36532 13.6868 5.56058L14.3939 4.85348ZM21.6856 12.1451L14.3939 4.85348L13.6868 5.56058L20.9785 12.8523L21.6856 12.1451Z" fill="#1D1D1D"></path>
                       <path d="M20.9785 12.1438C21.1737 11.9486 21.4903 11.9486 21.6856 12.1438C21.8808 12.3391 21.8808 12.6557 21.6856 12.8509L20.9785 12.1438ZM14.3939 20.1426C14.1987 20.3379 13.8821 20.3379 13.6868 20.1426C13.4915 19.9474 13.4915 19.6308 13.6868 19.4355L14.3939 20.1426ZM21.6856 12.8509L14.3939 20.1426L13.6868 19.4355L20.9785 12.1438L21.6856 12.8509Z" fill="#1D1D1D"></path>
                     </svg></span></div>
-                <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1, &quot;infinite&quot;: true}"><img class="cover" src="../dummy/catalog-large/с12.jpg"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c24.jpg"></div>
+                <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1, &quot;infinite&quot;: true}"><img class="cover" src="./../dummy/catalog-large/с12.jpg"><img src="../dummy/catalog/c22.jpg"><img src="../dummy/catalog/c23.jpg"><img src="../dummy/catalog/c24.jpg"></div>
                 <div class="slider-size"> 
                   <div class="slider-size__title">Добавить в корзину</div>
                   <div class="slider-size__list"> 
@@ -956,7 +956,7 @@
                 </div>
                 <div class="order-table__color" style="width: calc(2 * 19px);"><a class="order-table__color-link color-active" href="#"> <span class="color-red"> </span></a><a class="order-table__color-link" href="#"> <span class="color-yellow"></span></a>
                 </div><a class="catalog-item-link" href="card.html"></a>
-                <button class="catalog-item-like" type="button">      </button>
+                <button class="catalog-item-like" type="button">   </button>
               </div>
             </div>
             <div class="big-grid__item-four-left"> 
@@ -1096,7 +1096,7 @@
                 </div>
                 <div class="order-table__color" style="width: calc(2 * 19px);"><a class="order-table__color-link color-active" href="#"> <span class="color-red"> </span></a><a class="order-table__color-link" href="#"> <span class="color-yellow"></span></a>
                 </div><a class="catalog-item-link" href="card.html"></a>
-                <button class="catalog-item-like" type="button">      </button>
+                <button class="catalog-item-like" type="button">    </button>
               </div>
             </div>
             <div class="big-grid__item-two-center-left"> 
@@ -1205,7 +1205,7 @@
               </div>
             </div>
             <div class="big-grid__item-two-center-right empty"> <!-- пусто --></div>
-            <div class="big-grid__item-one-center"> 
+            <div class="big-grid__item-one-center">
               <div class="catalog-item w2 m-0">
                 <div class="slider-arrows"><span class="catalog-item-slider-arrow prev">
                     <svg width="26" height="25" viewBox="0 0 26 25" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -1237,7 +1237,7 @@
                 </div>
                 <div class="order-table__color" style="width: calc(2 * 19px);"><a class="order-table__color-link color-active" href="#"> <span class="color-red"> </span></a><a class="order-table__color-link" href="#"> <span class="color-yellow"></span></a>
                 </div><a class="catalog-item-link" href="card.html"></a>
-                <button class="catalog-item-like" type="button">      </button>
+                <button class="catalog-item-like" type="button"> </button>
               </div>
             </div>
             <div class="big-grid__item-three-one"> 
@@ -1377,7 +1377,7 @@
                 </div>
                 <div class="order-table__color" style="width: calc(2 * 19px);"><a class="order-table__color-link color-active" href="#"> <span class="color-red"> </span></a><a class="order-table__color-link" href="#"> <span class="color-yellow"></span></a>
                 </div><a class="catalog-item-link" href="card.html"></a>
-                <button class="catalog-item-like" type="button">       </button>
+                <button class="catalog-item-like" type="button"> </button>
               </div>
             </div>
             <div class="big-grid__item-one-center"> 
@@ -1412,7 +1412,7 @@
                 </div>
                 <div class="order-table__color" style="width: calc(2 * 19px);"><a class="order-table__color-link color-active" href="#"> <span class="color-red"> </span></a><a class="order-table__color-link" href="#"> <span class="color-yellow"></span></a>
                 </div><a class="catalog-item-link" href="card.html"></a>
-                <button class="catalog-item-like" type="button">      </button>
+                <button class="catalog-item-like" type="button">  </button>
               </div>
             </div>
             <div class="big-grid__item-two-center-left"> 
@@ -1483,7 +1483,7 @@
                 </div>
                 <div class="order-table__color" style="width: calc(2 * 19px);"><a class="order-table__color-link color-active" href="#"> <span class="color-red"> </span></a><a class="order-table__color-link" href="#"> <span class="color-yellow"></span></a>
                 </div><a class="catalog-item-link" href="card.html"></a>
-                <button class="catalog-item-like" type="button">      </button>
+                <button class="catalog-item-like" type="button">  </button>
               </div>
             </div>
             <div class="big-grid__item-one-center"> 
@@ -1518,7 +1518,7 @@
                 </div>
                 <div class="order-table__color" style="width: calc(2 * 19px);"><a class="order-table__color-link color-active" href="#"> <span class="color-red"> </span></a><a class="order-table__color-link" href="#"> <span class="color-yellow"></span></a>
                 </div><a class="catalog-item-link" href="card.html"></a>
-                <button class="catalog-item-like" type="button">      </button>
+                <button class="catalog-item-like" type="button">    </button>
               </div>
             </div>
             <div class="big-grid__item-double-center big-grid__item-double-center_alon"> 
@@ -1559,7 +1559,7 @@
                 <div class="load-more-holder"><a class="btn btn--black_border btn--medium load-more" href="section.html" data-container="#catalog-items" data-itemsselector="#catalog-items .catalog-items">ПОКАЗАТЬ ЕЩЕ 20</a></div>
               </div>
             </div>
-            <div class="big-grid__item-double-center" style="margin-left: 0; margin-right: 0;">
+            <div class="big-grid__item-double-center mlr-0">
               <div class="catalog">
                 <div class="catalog slider-prev-watched">
                   <div class="row justify-content-between align-items-center">
