--- a/dev/public/brand-large.html
+++ b/dev/public/brand-large.html
@@ -562,7 +562,7 @@
               <div class="catalog-item-text">
                 <div class="catalog-item-text__title">ПЛАТЬЯ И КОМБИНЕЗОНЫ НОВОГО СЕЗОНА ДЛЯ ЖЕНЩИН</div>
                 <div class="catalog-item-text__lid">Подготовьте свой гардероб к первым дням весны с нашей новой подборкой, в которую вошли новые модели актуальных оттенков</div><a class="link-more link-more-js" href="#">Подробнее</a>
-                <div class="v-hidden">текст подробнее текст подробнее текст подробнее</div>
+                <div class="d-none">текст подробнее текст подробнее текст подробнее</div>
               </div>
             </div>
             <div class="big-grid__item-two-center-left"> 
@@ -1534,7 +1534,7 @@
                       <path d="M20.9785 12.8523C21.1737 13.0475 21.4903 13.0475 21.6856 12.8523C21.8808 12.657 21.8808 12.3404 21.6856 12.1451L20.9785 12.8523ZM14.3939 4.85348C14.1987 4.65822 13.8821 4.65822 13.6868 4.85348C13.4915 5.04874 13.4915 5.36532 13.6868 5.56058L14.3939 4.85348ZM21.6856 12.1451L14.3939 4.85348L13.6868 5.56058L20.9785 12.8523L21.6856 12.1451Z" fill="#1D1D1D"></path>
                       <path d="M20.9785 12.1438C21.1737 11.9486 21.4903 11.9486 21.6856 12.1438C21.8808 12.3391 21.8808 12.6557 21.6856 12.8509L20.9785 12.1438ZM14.3939 20.1426C14.1987 20.3379 13.8821 20.3379 13.6868 20.1426C13.4915 19.9474 13.4915 19.6308 13.6868 19.4355L14.3939 20.1426ZM21.6856 12.8509L14.3939 20.1426L13.6868 19.4355L20.9785 12.1438L21.6856 12.8509Z" fill="#1D1D1D"></path>
                     </svg></span></div>
-                <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1, &quot;infinite&quot;: true}"><img class="only-desktop cover" src="../dummy/catalog-large/с28.jpg"><img class="only-mobile cover" src="../dummy/catalog-large/mobile/с28.jpg"><img class="cover" src="../dummy/catalog-large/c8.jpg"><img class="cover" src="../dummy/catalog-large/c8.jpg"><img class="cover" src="../dummy/catalog-large/c8.jpg"><img class="cover" src="../dummy/catalog-large/c8.jpg"></div>
+                <div class="catalog-item-photo-holder catalog-item-slider" data-params="{&quot;slidesToShow&quot;: 1, &quot;slidesToScroll&quot;: 1, &quot;infinite&quot;: true}"><img class="img-only-desktop cover" src="../dummy/catalog-large/с28.jpg"><img class="img-only-mobile cover" src="../dummy/catalog/с28.jpg"><img class="cover" src="../dummy/catalog-large/c8.jpg"><img class="cover" src="../dummy/catalog-large/c8.jpg"><img class="cover" src="../dummy/catalog-large/c8.jpg"><img class="cover" src="../dummy/catalog-large/c8.jpg"></div>
                 <div class="slider-size"> 
                   <div class="slider-size__title">Добавить в корзину</div>
                   <div class="slider-size__list"> 
