--- a/dev/public/brand-large.html
+++ b/dev/public/brand-large.html
@@ -504,7 +504,7 @@
           </div>
         </div>
       </header>
-      <main class="page-content">
+      <main class="page-content"><a name="top"></a>
         <div class="page-inner page-inner--w1 page-inner--mobile_empty">
           <div class="filters-block d-block d-lg-none">
             <div class="row mobile-slider"><a href="#">Эко–кожа</a><a href="#">Вискоза / Хлопок</a><a href="#">Шерсть / Кашемир</a><a href="#">Комбинезоны</a><a href="#">Цвет</a>
@@ -1724,6 +1724,7 @@
                 <div class="footer-bottom__center"><a href="#">©2022 Brusnika</a></div>
                 <div class="footer-bottom__right only-desktop">© 1999-2022 Интернет-магазин «Brusnika»    </div>
               </div>
+              <div class="arrow-top"></div>
             </div>
           </div>
         </div>
