same edits for arrow top

--- a/dev/public/basket-moscow.html
+++ b/dev/public/basket-moscow.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="no-js" lang="ru" prefix="og:http://ogp.me/ns#">
+<html class="no-js scroll-container" lang="ru" prefix="og:http://ogp.me/ns#">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -792,6 +792,7 @@
             </div>
             <div class="footer-bottom__right">Разработка сайта — RUFORMAT®</div>
           </div>
+          <div class="arrow-top"></div>
         </div>
       </footer>
     </div>
