--- a/dev/public/shops.html
+++ b/dev/public/shops.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="no-js" lang="ru" prefix="og:http://ogp.me/ns#">
+<html class="no-js scroll-container" lang="ru" prefix="og:http://ogp.me/ns#">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -27,7 +27,7 @@
     <script src="https://api-maps.yandex.ru/2.1/?load=package.standard&amp;lang=ru-RU&amp;apikey=3493f917-bc4d-4df0-aaaf-2d994fa3f731" type="text/javascript"></script>
   </head>
   <body class="overflow-x">
-    <div class="page">
+    <div class="page overflow-x">
       <html>
         <head></head>
         <body>
@@ -695,6 +695,7 @@
               <div class="footer-bottom__center"><a href="#">©2022 Brusnika</a></div>
               <div class="footer-bottom__right only-desktop">© 1999-2022 Интернет-магазин «Brusnika»    </div>
             </div>
+            <div class="arrow-top"></div>
           </div>
         </div>
       </footer>
