--- a/dev/public/brand-large.html
+++ b/dev/public/brand-large.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="no-js" lang="ru" prefix="og:http://ogp.me/ns#">
+<html class="no-js scroll-container" lang="ru" prefix="og:http://ogp.me/ns#">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
