--- a/dev/public/login.html
+++ b/dev/public/login.html
@@ -644,57 +644,59 @@
         </div>
       </footer>
     </div>
-    <div class="page-popup page-popup--auth-form mfp-hide" id="auth-form">
-      <div class="page-popup-inner">
-        <div class="page-popup-title">Войти</div>
-        <div class="page-popup-title--small">Введите свою почту и пароль, чтобы войти.</div>
-        <form class="form">
-          <div class="tabs form-tabs">
-            <div class="tabs-heading form-tabs-heading">
-              <div class="form-tabs-heading-items">
-                <div class="tab-heading-item active form-tab-heading-item" data-tab="#auth-form_email" data-tabs=".auth-tab">Войдите по E-mail</div>
-                <div class="tab-heading-item form-tab-heading-item" data-tab="#auth-form_phone" data-tabs=".auth-tab">Войдите через смс</div>
+    <div class="page-popup mfp-hide" id="auth-form">
+      <div class="page-popup-title">ВХОД</div>
+      <form class="form">
+        <div class="tabs form-tabs">
+          <div class="tabs-heading form-tabs-heading">
+            <div class="form-tabs-heading-items">
+              <div class="tab-heading-item active form-tab-heading-item sign-with" data-tab="#auth-form_email" data-tabs=".auth-tab">
+                 Войдите по E-mail</div>
+              <div class="tab-heading-item form-tab-heading-item sign-with" data-tab="#auth-form_phone" data-tabs=".auth-tab">
+                 Войдите через смс</div>
+            </div>
+          </div>
+          <div class="tabs-content form-tabs-content" style="min-height: 250px">
+            <div class="tab-content-item auth-tab show form-tab-content-item" id="auth-form_phone">
+              <div class="form-row">               
+                <div class="page-popup-title--small">
+                  Введите свой номер телефона, чтобы войти. На указанный телефон придёт смс для авторизации.</div>
+              </div>
+              <div class="form-row">
+                <label class="form-label" for="auth_sms">Контактный телефон</label>
+                <div class="form-item-holder">
+                  <input class="form-item form-item--text" id="auth_sms" type="tel" name="auth_sms" required="" placeholder="+7-___-___-___" data-validation="{&quot;message&quot;: &quot;Укажите номер телефона&quot;, &quot;mask&quot;: &quot;+7 999-999-999&quot;}">
+                </div>
+              </div>
+              <div class="form-row"><a class="btn btn--black btn--medium w100 max-w100" href="#sms-cod-popup" data-popup="{&quot;type&quot;:&quot;inline&quot;}">ВЫСЛАТЬ КОД</a></div>
+              <div class="form-row">
+                <div class="form-group-inner forgot-password"><a class="link link--black_border" href="#change-password-popup" data-popup="{&quot;type&quot;:&quot;inline&quot;}"><span>Я забыл пароль  </span></a><a class="link link--black_border" href="registration.html"><span>Регистрация</span></a></div>
               </div>
             </div>
-            <div class="tabs-content form-tabs-content">
-              <div class="tab-content-item auth-tab show form-tab-content-item" id="auth-form_phone">
-                <div class="form-row">
-                  <label class="form-label" for="auth_sms">Контактный телефон</label>
-                  <div class="form-item-holder">
-                    <input class="form-item form-item--text" id="auth_sms" type="email" name="auth_sms" required="" data-validation="">
-                  </div>
-                </div>
-                <div class="form-row">
-                  <button class="btn btn--black btn--medium w100 max-w100" type="submit">ВЫСЛАТЬ КОД</button>
-                </div>
-                <div class="form-row">
-                  <div class="form-group-inner"><a class="link link--black_border" href="#"><span>Я забыл пароль  </span></a><a class="link link--black_border" href="#"><span>Регистрация</span></a></div>
+            <div class="tab-content-item auth-tab active form-tab-content-item" id="auth-form_email">
+              <div class="form-row">
+                <div class="page-popup-title--small">Введите свою почту и пароль, чтобы войти.</div>
+              </div>
+              <div class="form-row">
+                <label class="form-label" for="auth_email">Ваш E-mail</label>
+                <div class="form-item-holder">
+                  <input class="form-item form-item--text" id="auth_email" type="email" name="auth_email" required="" data-validation="{&quot;message&quot;: &quot;Укажите корректный e-mail&quot;}">
                 </div>
               </div>
-              <div class="tab-content-item auth-tab active form-tab-content-item" id="auth-form_email">
-                <div class="form-row">
-                  <label class="form-label" for="auth_email">Ваш E-mail</label>
-                  <div class="form-item-holder">
-                    <input class="form-item form-item--text" id="auth_email" type="email" name="auth_email" required="" data-validation="">
-                  </div>
-                </div>
-                <div class="form-row">
-                  <label class="form-label" for="auth_pass">Пароль</label>
-                  <div class="form-item-holder">
-                    <input class="form-item form-item--password" id="auth_pass" type="password" name="auth_pass" required="" data-validation="">
-                  </div>
-                </div>
-                <div class="form-row">
-                  <button class="btn btn--black btn--medium w100 max-w100" type="submit">Войти</button>
-                </div>
-                <div class="form-row">
-                  <div class="form-group-inner"><a class="link link--black_border" href="#"><span>Я забыл пароль  </span></a><a class="link link--black_border" href="#"><span>Регистрация</span></a></div>
-                </div>
+              <div class="form-row">
+                <label class="form-label" for="reg_pass1">Пароль</label>
+                <input class="form-item form-item--password" id="reg_pass1" type="password" name="reg_pass1" required="" data-validation="{&quot;minlength&quot;: &quot;6&quot;, &quot;message&quot;: {&quot;required&quot;: &quot;&quot;, &quot;minlength&quot;: &quot;Минимальная длина пароля – 6 символов&quot;}}"><span class="password-show"></span>
+              </div>
+              <div class="form-row">
+                <button class="btn btn--black btn--medium w100 max-w100" type="submit">Войти</button>
+              </div>
+              <div class="form-row">
+                <div class="form-group-inner forgot-password"><a class="link link--black_border" href="#change-password-popup" data-popup="{&quot;type&quot;:&quot;inline&quot;}"><span>Я забыл пароль  </span></a><a class="link link--black_border" href="registration.html"><span>Регистрация      </span></a></div>
               </div>
             </div>
           </div>
-        </form>
-      </div>
+        </div>
+      </form>
     </div>
     <div class="page-popup mfp-hide" id="login-popup">
       <div class="page-popup-heading">
@@ -1234,9 +1236,7 @@
                   <input class="form-item form-item--text" id="auth_sms" type="tel" name="auth_sms" required="" placeholder="+7-___-___-___" data-validation="{&quot;message&quot;: &quot;Укажите номер телефона&quot;, &quot;mask&quot;: &quot;+7 999-999-999&quot;}">
                 </div>
               </div>
-              <div class="form-row">
-                <button class="btn btn--black btn--medium w100 max-w100" type="submit">ВЫСЛАТЬ КОД</button>
-              </div>
+              <div class="form-row"><a class="btn btn--black btn--medium w100 max-w100" href="#sms-cod-popup" data-popup="{&quot;type&quot;:&quot;inline&quot;}">ВЫСЛАТЬ КОД</a></div>
             </div>
             <div class="tab-content-item tab active form-tab-content-item" id="form_email">
               <div class="form-row">
@@ -1249,9 +1249,7 @@
                   <input class="form-item form-item--text" id="auth_email" type="email" name="auth_email" required="" data-validation="{&quot;message&quot;: &quot;Укажите корректный e-mail&quot;}">
                 </div>
               </div>
-              <div class="form-row">
-                <button class="btn btn--black btn--medium w100 max-w100" type="submit">ОТПРАВИТЬ</button>
-              </div>
+              <div class="form-row"><a class="btn btn--black btn--medium w100 max-w100" href="#change-password-text-popup" data-popup="{&quot;type&quot;:&quot;inline&quot;}">ОТПРАВИТЬ</a></div>
             </div>
           </div>
         </div>
@@ -1555,6 +1553,12 @@
             </ul>
       </div>
       <div class="page-popup-footer"><a class="btn btn--black btn--medium btn--fullwidth basket-open" href="#">Выберите размеры</a></div>
+    </div>
+    <div class="page-popup mfp-hide" id="change-password-text-popup">
+      <div class="page-popup-heading">
+        <div class="page-popup-title uppercase"> Сменить свой пароль</div>
+      </div>
+      <p>Ссылка для восстановления пароля отправлена на ваш e-mail. Проверьте почту.</p>
     </div>
     <div class="page-popup page-popup--checked mfp-hide" id="checkout-popup">
       <div class="page-popup-heading">
