fix magnific-popup for mobile

--- a/dev/public/card.html
+++ b/dev/public/card.html
@@ -1247,7 +1247,7 @@
               </div>
               <div class="form-row">
                 <label class="form-label" for="reg_pass1">Пароль</label>
-                <input class="form-item form-item--password" id="reg_pass1" type="password" name="reg_pass1" required="" data-validation="{&quot;minlength&quot;: &quot;6&quot;, &quot;message&quot;: {&quot;required&quot;: &quot;&quot;, &quot;minlength&quot;: &quot;Минимальная длина пароля – 6 символов&quot;}}"><span class="password-show"></span>
+                <input class="form-item form-item--password" id="reg_pass1" type="password" name="reg_pass1" required="" data-validation="{&quot;minlength&quot;: &quot;6&quot;, &quot;message&quot;: {&quot;required&quot;: &quot;&quot;, &quot;minlength&quot;: &quot;Длина пароля не мнее 6 символов – 6 символов&quot;}}"><span class="password-show"></span>
               </div>
               <div class="form-row">
                 <button class="btn btn--black btn--medium w100 max-w100" type="submit">Войти</button>
@@ -1845,11 +1845,11 @@
           </div>
           <div class="form-row">
             <label class="form-item-label" for="reg_pass1">Новый пароль</label>
-            <input class="form-item form-item--password" id="reg_pass1" type="password" name="reg_pass1" required="" data-validation="{&quot;minlength&quot;: &quot;6&quot;, &quot;message&quot;: {&quot;required&quot;: &quot;&quot;, &quot;minlength&quot;: &quot;Минимальная длина пароля – 6 символов&quot;}}"><span class="password-show"> </span>
+            <input class="form-item form-item--password" id="reg_pass1" type="password" name="reg_pass1" required="" data-validation="{&quot;minlength&quot;: &quot;6&quot;, &quot;message&quot;: {&quot;required&quot;: &quot;&quot;, &quot;minlength&quot;: &quot;Длина пароля не мнее 6 символов – 6 символов&quot;}}"><span class="password-show"> </span>
           </div>
           <div class="form-row">
             <label class="form-item-label" for="reg_pass2">Новый пароль еще раз</label>
-            <input class="form-item form-item--password" id="reg_pass2" type="password" name="reg_pass2" required="" data-validation="{&quot;minlength&quot;: &quot;6&quot;, &quot;equalTo&quot;: &quot;#reg_pass1&quot;, &quot;message&quot;: {&quot;equalTo&quot;: &quot;Пароли не совпадают&quot;, &quot;required&quot;: &quot;&quot;, &quot;minlength&quot;: &quot;Минимальная длина пароля – 6 символов&quot;}}"><span class="password-show"></span>
+            <input class="form-item form-item--password" id="reg_pass2" type="password" name="reg_pass2" required="" data-validation="{&quot;minlength&quot;: &quot;6&quot;, &quot;equalTo&quot;: &quot;#reg_pass1&quot;, &quot;message&quot;: {&quot;equalTo&quot;: &quot;Пароли не совпадают&quot;, &quot;required&quot;: &quot;&quot;, &quot;minlength&quot;: &quot;Длина пароля не мнее 6 символов – 6 символов&quot;}}"><span class="password-show"></span>
           </div>
           <div class="form-row form-row--checkbox">
             <input class="form-item form-item--checkbox catalog-item-checkbox" id="saile" type="checkbox" checked="checked">
