fix other edits from oleg

--- a/dev/public/brand.html
+++ b/dev/public/brand.html
@@ -559,10 +559,10 @@
                     </div>
                   </div>
                   <div class="catalog-item-title"> 
-                    <dev>
+                    <div>
                       <div class="catalog-item-title-title">Жакет 4321</div>
                       <div class="catalog-item-price">3000 РУБ</div>
-                    </dev>
+                    </div>
                     <div class="catalog-item-color">+3 цвета</div>
                     <div class="order-table__color" style="width: calc(3 * 19px);"><a class="order-table__color-link" href="#"> <span class="color-beg"></span></a><a class="order-table__color-link color-active" href="#"> <span class="color-violet"> </span></a><a class="order-table__color-link" href="#"> <span class="color-green"></span></a>
                     </div>
@@ -597,10 +597,10 @@
                     </div>
                   </div>
                   <div class="catalog-item-title"> 
-                    <dev>
+                    <div>
                       <div class="catalog-item-title-title">Жакет 2</div>
                       <div class="catalog-item-price">345 РУБ</div>
-                    </dev>
+                    </div>
                     <div class="catalog-item-color">+3 цвета</div>
                     <div class="order-table__color" style="width: calc(3 * 19px);"><a class="order-table__color-link" href="#"> <span class="color-beg"></span></a><a class="order-table__color-link color-active" href="#"> <span class="color-violet"> </span></a><a class="order-table__color-link" href="#"> <span class="color-green"></span></a>
                     </div>
@@ -635,10 +635,10 @@
                     </div>
                   </div>
                   <div class="catalog-item-title"> 
-                    <dev>
+                    <div>
                       <div class="catalog-item-title-title">Жакет 3</div>
                       <div class="catalog-item-price">2329 РУБ</div>
-                    </dev>
+                    </div>
                     <div class="catalog-item-color">+3 цвета</div>
                     <div class="order-table__color" style="width: calc(3 * 19px);"><a class="order-table__color-link" href="#"> <span class="color-beg"></span></a><a class="order-table__color-link color-active" href="#"> <span class="color-violet"> </span></a><a class="order-table__color-link" href="#"> <span class="color-green"></span></a>
                     </div>
@@ -673,10 +673,10 @@
                     </div>
                   </div>
                   <div class="catalog-item-title"> 
-                    <dev>
+                    <div>
                       <div class="catalog-item-title-title">Жакет 4</div>
                       <div class="catalog-item-price">2329 РУБ</div>
-                    </dev>
+                    </div>
                     <div class="catalog-item-color">+3 цвета</div>
                     <div class="order-table__color" style="width: calc(3 * 19px);"><a class="order-table__color-link" href="#"> <span class="color-beg"></span></a><a class="order-table__color-link color-active" href="#"> <span class="color-violet"> </span></a><a class="order-table__color-link" href="#"> <span class="color-green"></span></a>
                     </div>
@@ -1143,7 +1143,7 @@
                     <form class="form" novalidate="novalidate">
                       <div class="footer-form__form">
                         <div class="form-row">
-                          <input type="email" name="f3" required="" data-validation="{&quot;message&quot;: &quot;Укажите корректный адрес почты&quot;}" value="petrov@gmail.com">
+                          <input type="email" name="f3" required="" data-validation="{&quot;message&quot;: &quot;Укажите корректный адрес почты&quot;}" value="Введите свой E-mail">
                         </div>
                         <button class="btn btn--white" type="submit" href="#message-you-subscribed" data-popup="{&quot;type&quot;:&quot;inline&quot;}">ok</button>
                       </div>
@@ -1344,7 +1344,7 @@
                   <li><a href="#">XL</a></li>
                 </ul>
           </div>
-        </div><a class="btn btn--black btn--medium btn--fullwidth basket-open" href="#">Выберите размеры  </a>
+        </div><a class="btn btn--black btn--medium btn--fullwidth basket-open" href="#">222 Выберите размеры  </a>
       </div>
     </div>
     <div class="page-popup mfp-hide" id="mail-popup">
