--- a/dev/public/card.html
+++ b/dev/public/card.html
@@ -504,7 +504,7 @@
           </div>
         </div>
       </header>
-      <main class="page-content">
+      <main class="page-content page-content--card">
         <div class="page-inner page-inner--w1">
           <link rel="stylesheet" type="text/css" media="screen" href="../css/photoswipe.css?v=724611">
           <div class="breadcrumbs"><a class="link link--gray" href="#">Назад</a></div>
@@ -598,7 +598,7 @@
             <div class="products-photos__wrapper">
               <div class="product-photos__inner products-photos-only-desktop">
                 <div class="my-gallery product-photos"><a href="../dummy/slider/c1.png" data-pswp-width="2500" data-pswp-height="3688" target="_blank"><img src="../dummy/slider/c1.png"></a><a href="../dummy/slider/c2.png" data-pswp-width="2500" data-pswp-height="3688" target="_blank"><img src="../dummy/slider/c2.png"></a><a href="../dummy/slider/c3.png" data-pswp-width="2500" data-pswp-height="3688" target="_blank"><img src="../dummy/slider/c3.png"></a><a href="../dummy/slider/c4.png" data-pswp-width="2500" data-pswp-height="3688" target="_blank"><img src="../dummy/slider/c4.png"></a><a href="../dummy/slider/c5.png" data-pswp-width="2500" data-pswp-height="3688" target="_blank"><img src="../dummy/slider/c5.png"></a><a href="../dummy/slider/c6.png" data-pswp-width="2500" data-pswp-height="3688" target="_blank"><img src="../dummy/slider/c6.png"></a></div>
-                <div class="product-photos-nav"><img src="../dummy/slider/c1.png"><img src="../dummy/slider/c2.png"><img src="../dummy/slider/c3.png"><img src="../dummy/slider/c4.png"><img src="../dummy/slider/c5.png"><img src="../dummy/slider/c6.png"></div>
+                <div class="product-photos-nav"><span><img src="../dummy/slider/c1.png"></span><span><img src="../dummy/slider/c2.png"></span><span><img src="../dummy/slider/c3.png"></span><span><img src="../dummy/slider/c4.png"></span><span><img src="../dummy/slider/c5.png"></span><span><img src="../dummy/slider/c6.png"></span></div>
               </div>
               <div class="product-photos__inner products-photos-only-mobile for-slick-slider">
                 <div class="product-photos-gallery__wrapper for-slick-slider">
@@ -843,14 +843,14 @@
                                 </div>
                               </div>
                               <div class="catalog-item-title"> 
-                                <dev>
+                                <div>
                                   <div class="catalog-item-title-title">Жакет 4321</div>
                                   <div class="catalog-item-price">3000 РУБ
                                     <div class="catalog-item-labels">
                                       <div class="catalog-item-label black">Хит               </div>
                                     </div>
                                   </div>
-                                </dev>
+                                </div>
                                 <div class="catalog-item-color">+3 цвета</div>
                                 <div class="order-table__color" style="width: calc(3 * 19px);"><a class="order-table__color-link" href="#"> <span class="color-beg"></span></a><a class="order-table__color-link color-active" href="#"> <span class="color-violet"> </span></a><a class="order-table__color-link" href="#"> <span class="color-green"></span></a>
                                 </div>
@@ -885,14 +885,14 @@
                                 </div>
                               </div>
                               <div class="catalog-item-title"> 
-                                <dev>
+                                <div>
                                   <div class="catalog-item-title-title">Жакет 2</div>
                                   <div class="catalog-item-price">345 РУБ
                                     <div class="catalog-item-labels">
                                       <div class="catalog-item-label black">Хит               </div>
                                     </div>
                                   </div>
-                                </dev>
+                                </div>
                                 <div class="catalog-item-color">+3 цвета</div>
                                 <div class="order-table__color" style="width: calc(3 * 19px);"><a class="order-table__color-link" href="#"> <span class="color-beg"></span></a><a class="order-table__color-link color-active" href="#"> <span class="color-violet"> </span></a><a class="order-table__color-link" href="#"> <span class="color-green"></span></a>
                                 </div>
@@ -927,14 +927,14 @@
                                 </div>
                               </div>
                               <div class="catalog-item-title"> 
-                                <dev>
+                                <div>
                                   <div class="catalog-item-title-title">Жакет 3</div>
                                   <div class="catalog-item-price">2329 РУБ
                                     <div class="catalog-item-labels">
                                       <div class="catalog-item-label black">Хит               </div>
                                     </div>
                                   </div>
-                                </dev>
+                                </div>
                                 <div class="catalog-item-color">+3 цвета</div>
                                 <div class="order-table__color" style="width: calc(3 * 19px);"><a class="order-table__color-link" href="#"> <span class="color-beg"></span></a><a class="order-table__color-link color-active" href="#"> <span class="color-violet"> </span></a><a class="order-table__color-link" href="#"> <span class="color-green"></span></a>
                                 </div>
@@ -969,14 +969,14 @@
                                 </div>
                               </div>
                               <div class="catalog-item-title"> 
-                                <dev>
+                                <div>
                                   <div class="catalog-item-title-title">Жакет 4</div>
                                   <div class="catalog-item-price">2329 РУБ
                                     <div class="catalog-item-labels">
                                       <div class="catalog-item-label black">Хит               </div>
                                     </div>
                                   </div>
-                                </dev>
+                                </div>
                                 <div class="catalog-item-color">+3 цвета</div>
                                 <div class="order-table__color" style="width: calc(3 * 19px);"><a class="order-table__color-link" href="#"> <span class="color-beg"></span></a><a class="order-table__color-link color-active" href="#"> <span class="color-violet"> </span></a><a class="order-table__color-link" href="#"> <span class="color-green"></span></a>
                                 </div>
@@ -1181,7 +1181,7 @@
                     <form class="form" novalidate="novalidate">
                       <div class="footer-form__form">
                         <div class="form-row">
-                          <input type="email" name="f3" required="" data-validation="{&quot;message&quot;: &quot;Укажите корректный адрес почты&quot;}" value="petrov@gmail.com">
+                          <input type="email" name="f3" required="" data-validation="{&quot;message&quot;: &quot;Укажите корректный адрес почты&quot;}" value="Введите свой E-mail">
                         </div>
                         <button class="btn btn--white" type="submit" href="#message-you-subscribed" data-popup="{&quot;type&quot;:&quot;inline&quot;}">ok</button>
                       </div>
@@ -1382,7 +1382,7 @@
                   <li><a href="#">XL</a></li>
                 </ul>
           </div>
-        </div><a class="btn btn--black btn--medium btn--fullwidth basket-open" href="#">Выберите размеры  </a>
+        </div><a class="btn btn--black btn--medium btn--fullwidth basket-open" href="#">222 Выберите размеры  </a>
       </div>
     </div>
     <div class="page-popup mfp-hide" id="mail-popup">
