--- a/dev/public/login.html
+++ b/dev/public/login.html
@@ -619,7 +619,7 @@
                     <form class="form" novalidate="novalidate">
                       <div class="footer-form__form">
                         <div class="form-row">
-                          <input type="email" name="f3" required="" data-validation="{&quot;message&quot;: &quot;Укажите корректный адрес почты&quot;}" value="petrov@gmail.com">
+                          <input type="email" name="f3" required="" data-validation="{&quot;message&quot;: &quot;Укажите корректный адрес почты&quot;}" value="Введите свой E-mail">
                         </div>
                         <button class="btn btn--white" type="submit" href="#message-you-subscribed" data-popup="{&quot;type&quot;:&quot;inline&quot;}">ok</button>
                       </div>
@@ -820,7 +820,7 @@
                   <li><a href="#">XL</a></li>
                 </ul>
           </div>
-        </div><a class="btn btn--black btn--medium btn--fullwidth basket-open" href="#">Выберите размеры  </a>
+        </div><a class="btn btn--black btn--medium btn--fullwidth basket-open" href="#">222 Выберите размеры  </a>
       </div>
     </div>
     <div class="page-popup mfp-hide" id="mail-popup">
