--- a/dev/public/basket.html
+++ b/dev/public/basket.html
@@ -948,7 +948,7 @@
                   <li><a href="#">XL</a></li>
                 </ul>
           </div>
-        </div><a class="btn btn--black btn--medium btn--fullwidth basket-open" href="#">Выберите размеры  </a>
+        </div><a class="btn btn--black btn--medium btn--fullwidth basket-open" href="#">222 Выберите размеры  </a>
       </div>
     </div>
     <div class="page-popup mfp-hide" id="mail-popup">
