--- a/dev/public/brand-large.html
+++ b/dev/public/brand-large.html
@@ -521,7 +521,7 @@
             </div>
           </div>
         </div>
-        <div class="page-inner overflow-x1"> 
+        <div class="page-inner">
           <div class="big-grid" id="catalog-items">
             <div class="big-grid__item-one-center"> 
               <div class="catalog-item w2 m-0">
@@ -562,7 +562,7 @@
               <div class="catalog-item-text">
                 <div class="catalog-item-text__title">ПЛАТЬЯ И КОМБИНЕЗОНЫ НОВОГО СЕЗОНА ДЛЯ ЖЕНЩИН</div>
                 <div class="catalog-item-text__lid">Подготовьте свой гардероб к первым дням весны с нашей новой подборкой, в которую вошли новые модели актуальных оттенков</div><a class="link-more link-more-text-js" href="#">Подробнее</a>
-                <div class="d-none">текст подробнее текст Подготовьте свой гардероб к первым дням весны с нашей новой подборкой, в которую вошли новые модели актуальных оттенковПодготовьте свой гардероб к первым дням весны с нашей новой подборкой, в которую вошли новые модели актуальных оттенковПодготовьте свой гардероб к первым дням весны с нашей новой подборкой, в которую вошли новые модели актуальных оттенковПодготовьте свой гардероб к первым дням весны с нашей новой подборкой, в которую вошли новые модели актуальных оттенковПодготовьте свой гардероб к первым дням весны с нашей новой подборкой, в которую вошли новые модели актуальных оттенков подробнее текст подробнее</div>
+                <div class="catalog-item-text__lid d-none">текст подробнее текст Подготовьте свой гардероб к первым дням весны с нашей новой подборкой, в которую вошли новые модели актуальных оттенковПодготовьте свой гардероб к первым дням весны с нашей новой подборкой, в которую вошли новые модели актуальных оттенковПодготовьте свой гардероб к первым дням весны с нашей новой подборкой, в которую вошли новые модели актуальных оттенковПодготовьте свой гардероб к первым дням весны с нашей новой подборкой, в которую вошли новые модели актуальных оттенковПодготовьте свой гардероб к первым дням весны с нашей новой подборкой, в которую вошли новые модели актуальных оттенков подробнее текст подробнее</div>
               </div>
             </div>
             <div class="big-grid__item-two-center-left"> 
