--- a/dev/public/brand.html
+++ b/dev/public/brand.html
@@ -563,7 +563,7 @@
                       <div class="catalog-item-title-title">Жакет 4321</div>
                       <div class="catalog-item-price">3000 РУБ</div>
                     </div>
-                    <div class="catalog-item-color">+3 цвета</div>
+                    <div class="catalog-item-color d-none d-sm-block">+3 цвета</div>
                     <div class="order-table__color" style="width: calc(3 * 19px);"><a class="order-table__color-link" href="#"> <span class="color-beg"></span></a><a class="order-table__color-link color-active" href="#"> <span class="color-violet"> </span></a><a class="order-table__color-link" href="#"> <span class="color-green"></span></a>
                     </div>
                   </div><a class="catalog-item-link" href="card.html"></a>
@@ -601,7 +601,7 @@
                       <div class="catalog-item-title-title">Жакет 2</div>
                       <div class="catalog-item-price">345 РУБ</div>
                     </div>
-                    <div class="catalog-item-color">+3 цвета</div>
+                    <div class="catalog-item-color d-none d-sm-block">+3 цвета</div>
                     <div class="order-table__color" style="width: calc(3 * 19px);"><a class="order-table__color-link" href="#"> <span class="color-beg"></span></a><a class="order-table__color-link color-active" href="#"> <span class="color-violet"> </span></a><a class="order-table__color-link" href="#"> <span class="color-green"></span></a>
                     </div>
                   </div><a class="catalog-item-link" href="card.html"></a>
@@ -639,7 +639,7 @@
                       <div class="catalog-item-title-title">Жакет 3</div>
                       <div class="catalog-item-price">2329 РУБ</div>
                     </div>
-                    <div class="catalog-item-color">+3 цвета</div>
+                    <div class="catalog-item-color d-none d-sm-block">+3 цвета</div>
                     <div class="order-table__color" style="width: calc(3 * 19px);"><a class="order-table__color-link" href="#"> <span class="color-beg"></span></a><a class="order-table__color-link color-active" href="#"> <span class="color-violet"> </span></a><a class="order-table__color-link" href="#"> <span class="color-green"></span></a>
                     </div>
                   </div><a class="catalog-item-link" href="card.html"></a>
@@ -677,7 +677,7 @@
                       <div class="catalog-item-title-title">Жакет 4</div>
                       <div class="catalog-item-price">2329 РУБ</div>
                     </div>
-                    <div class="catalog-item-color">+3 цвета</div>
+                    <div class="catalog-item-color d-none d-sm-block">+3 цвета</div>
                     <div class="order-table__color" style="width: calc(3 * 19px);"><a class="order-table__color-link" href="#"> <span class="color-beg"></span></a><a class="order-table__color-link color-active" href="#"> <span class="color-violet"> </span></a><a class="order-table__color-link" href="#"> <span class="color-green"></span></a>
                     </div>
                   </div><a class="catalog-item-link" href="card.html"></a>
@@ -686,7 +686,9 @@
               </div>
               <div class="col-12">
                 <div class="catalog-item-text">
-                  <div class="catalog-item-text__title">ПЛАТЬЯ И КОМБИНЕЗОНЫ НОВОГО СЕЗОНА ДЛЯ ЖЕНЩИН</div><a class="link-more" href="#">Подробнее</a>
+                  <div class="catalog-item-text__title">ПЛАТЬЯ И КОМБИНЕЗОНЫ НОВОГО СЕЗОНА ДЛЯ ЖЕНЩИН</div>
+                  <div class="catalog-item-text__lid">Подготовьте свой гардероб к первым дням весны с нашей новой подборкой, в которую вошли новые модели актуальных оттенков</div><a class="link-more link-more-text-js" href="#">Подробнее</a>
+                  <div class="catalog-item-text__lid d-none">текст подробнее текст Подготовьте свой гардероб к первым дням весны с нашей новой подборкой, в которую вошли новые модели актуальных оттенковПодготовьте свой гардероб к первым дням весны с нашей новой подборкой, в которую вошли новые модели актуальных оттенковПодготовьте свой гардероб к первым дням весны с нашей новой подборкой, в которую вошли новые модели актуальных оттенковПодготовьте свой гардероб к первым дням весны с нашей новой подборкой, в которую вошли новые модели актуальных оттенковПодготовьте свой гардероб к первым дням весны с нашей новой подборкой, в которую вошли новые модели актуальных оттенков подробнее текст подробнее</div>
                 </div>
               </div>
               <div class="col-6 col-lg-3">
